Feature/ban user (#541)
* feat(ever-admin): basic impplementation done

* feat(ever-admin): first implementation done, expecting feedback

* refactor(ever-admin): cleaned up code

* refactor(ever-admin): missed a console.error

* refactor(ever-admin): missed a console.error

--- a/admin/website-angular/src/app/pages/+customers/customers.component.html
+++ b/admin/website-angular/src/app/pages/+customers/customers.component.html
@@ -32,6 +32,22 @@
 			<i class="ion-md-phone-portrait"></i>&nbsp;&nbsp;
 			{{ 'CUSTOMERS_VIEW.CUSTOMERS_DEVICES' | translate }}
 		</button>
+
+		<button
+			class="btn btn-danger mr-2 d-inline-block"
+			[disabled]="!isOnlyOneCustomerSelected"
+			(click)="banSelectedRows()"
+		>
+			<i class="ion-md-close-circle button-icon"></i>
+
+			<small _ngcontent-c55="" *ngIf="isUserBanned">{{
+				'CUSTOMERS_VIEW.UNBAN' | translate
+			}}</small>
+
+			<small _ngcontent-c55="" *ngIf="!isUserBanned">{{
+				'CUSTOMERS_VIEW.BAN' | translate
+			}}</small>
+		</button>
 	</nb-card-header>
 
 	<nb-card-body [nbSpinner]="loading">
