--- a/shop/website-angular/src/app/+orders/order/order.component.scss
+++ b/shop/website-angular/src/app/+orders/order/order.component.scss
@@ -4,25 +4,81 @@
 	padding: 0;
 	display: flex;
 	justify-content: space-between;
-	height: 240px;
+	flex-direction: column;
+	height: 440px;
 	box-sizing: border-box;
-	padding: 20px;
 
 	.no-product-img {
 		border-left: 1px solid #95989a;
 	}
 }
 
-.order-info {
-	height: 100%;
-	width: 60%;
+.order-header {
+	background: #2a2c39;
+	height: 85px;
+	max-height: 85px;
+	width: 100%;
 	display: flex;
-	flex-direction: column;
+	align-items: center;
 	justify-content: space-between;
+	box-sizing: border-box;
+	padding-right: 20px;
+
+	.order-status-container {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		justify-content: space-between;
+	}
+
+	.order-status-icon {
+		height: 35px;
+		fill: white;
+	}
+
+	.order-status-text {
+		font-size: 12px;
+		font-weight: normal;
+		text-align: center;
+		color: white;
+		margin: 0px;
+	}
+
+	.warehouse-logo-container {
+		margin-right: 15px;
+	}
+
+	.warehouse-logo-container warehouse-logo {
+		width: 46px;
+		height: 46px;
+	}
+
+	.warehouse-logo-container warehouse-logo img {
+		opacity: 1;
+	}
+}
+
+.order-details {
+	display: flex;
+	width: 100%;
+	height: 70%;
+
+	.side-container {
+		width: 25%;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.order-info {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 .order-options {
 	display: flex;
+
 	button {
 		margin-left: 20px;
 	}
@@ -56,12 +112,11 @@
 	display: flex;
 	flex-direction: column;
 	font-size: 0.8em;
+
 	span:first-child {
 		font-size: 1em;
 		font-weight: bold;
 	}
-}
-.cancel-button {
 }
 
 .cancel-button svg {
@@ -75,39 +130,4 @@
 .order-picture {
 	width: 140px;
 	user-select: none;
-}
-
-.warehouse-logo-container {
-	position: absolute;
-	right: 109px;
-	top: 20%;
-}
-
-.warehouse-logo-container warehouse-logo {
-	width: 46px;
-	height: 46px;
-}
-
-.warehouse-logo-container warehouse-logo img {
-	opacity: 1;
-}
-
-.order-status-container {
-	text-align: center;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-}
-
-.order-status-icon {
-	height: 80px;
-	fill: #2a2c39;
-}
-
-.order-status-text {
-	font-size: 12px;
-	font-weight: normal;
-	line-height: 14px;
-	text-align: center;
-	color: rgba(0, 0, 0, 0.7);
 }
