fix(ever-admin): bug where error shows up in console if user cancel ban
feat(ever-admin): added show only banned filter to users dashboard

feat(ever-admin): now fake data has 25% to generate a abnned user

feat(ever-admin): added loading indicator and notification on banning

feat(ever-admin): added banned badge next to banned users name

feat(ever-admin): finishing touches on ban feature

--- a/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
+++ b/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
@@ -1,5 +1,10 @@
 <div (click)="redirect()" class="{{ redirectPage ? 'redirectBtn' : '' }}">
 	<h6 class="warehouse-name-smt">
-		<strong>{{ rowData.name }}</strong>
+		<strong
+			>{{ rowData.name
+			}}<span *ngIf="rowData.isBanned" class="badge badge-danger"
+				>Banned</span
+			></strong
+		>
 	</h6>
 </div>
