feat(ever-admin): improved ban feature

--- a/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
+++ b/admin/website-angular/src/app/@shared/render-component/name-redirect/name-redirect.component.html
@@ -3,7 +3,7 @@
 		<strong
 			>{{ rowData.name
 			}}<span *ngIf="rowData.isBanned" class="badge badge-danger"
-				>Banned</span
+				>ban</span
 			></strong
 		>
 	</h6>
