--- a/admin/website-angular/src/app/@shared/user/ban-confirm/ban-confirm.component.html
+++ b/admin/website-angular/src/app/@shared/user/ban-confirm/ban-confirm.component.html
@@ -30,7 +30,7 @@
 		type="button"
 		ngbAutofocus
 		class="btn btn-danger"
-		(click)="modal.close(user.id)"
+		(click)="modal.close(user)"
 	>
 		Ok
 	</button>
