--- a/shop/website-angular/src/app/+orders/order/order.component.scss
+++ b/shop/website-angular/src/app/+orders/order/order.component.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
-	height: 440px;
+	height: fit-content;
 	box-sizing: border-box;
 
 	.no-product-img {
@@ -15,9 +15,9 @@
 
 .order-header {
 	background: #2a2c39;
-	height: 85px;
-	max-height: 85px;
 	width: 100%;
+	padding-right: 20px;
+	height: 60px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -60,8 +60,10 @@
 
 .order-details {
 	display: flex;
+	justify-content: space-between;
+	//border: 1px solid black;
+	height: fit-content;
 	width: 100%;
-	height: 70%;
 
 	.side-container {
 		width: 25%;
@@ -70,9 +72,11 @@
 	}
 
 	.order-info {
-		height: 100%;
+		height: fit-content;
 		display: flex;
 		flex-direction: column;
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 }
 
@@ -80,8 +84,9 @@
 	display: flex;
 
 	button {
-		margin-left: 20px;
+		margin-right: 20px;
 	}
+	margin-bottom: 20px;
 }
 
 .product-name {
@@ -112,6 +117,9 @@
 	display: flex;
 	flex-direction: column;
 	font-size: 0.8em;
+	padding-right: 20px;
+	padding-top: 10px;
+	text-align: right;
 
 	span:first-child {
 		font-size: 1em;
@@ -127,7 +135,18 @@
 	height: 19px;
 }
 
+.pay-button svg {
+	position: relative;
+	top: -2px;
+	fill: #fff;
+	width: 19px;
+	height: 19px;
+}
+
+.order-images {
+	display: flex;
+}
 .order-picture {
-	width: 140px;
+	height: 110px;
 	user-select: none;
 }
