chore(ever-admin): update to nebular 4

--- a/admin/website-angular/src/app/@theme/components/switcher/switcher.component.scss
+++ b/admin/website-angular/src/app/@theme/components/switcher/switcher.component.scss
@@ -94,11 +94,12 @@
 			background-color: nb-theme(color-success);
 			transition: 0.2s;
 
-			box-shadow: 0 0 0.25rem 0 rgba(nb-theme(color-fg), 0.4);
+			// TODO style
+			// box-shadow: 0 0 0.25rem 0 rgba(nb-theme(color-fg), 0.4);
 
-			@include nb-for-theme(cosmic) {
-				@include btn-hero-primary-gradient();
-			}
+			// @include nb-for-theme(cosmic) {
+			// 	@include btn-hero-primary-gradient();
+			// }
 
 			@include nb-for-theme(corporate) {
 				background-color: nb-theme(color-primary);
