--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.scss
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.scss
@@ -44,8 +44,9 @@ $brand-darken: darken($brand, 5%);
 .subheader {
 	margin-bottom: 0.75rem;
 	font-size: 0.875rem;
-	font-weight: nb-theme(font-weight-bolder);
-	color: nb-theme(color-fg-heading);
+	// TODO style
+	// font-weight: nb-theme(font-weight-bolder);
+	// color: nb-theme(color-fg-heading);
 }
 
 .example-container:not(:last-child) {
