--- a/admin/website-angular/src/app/@theme/components/header/header.component.scss
+++ b/admin/website-angular/src/app/@theme/components/header/header.component.scss
@@ -140,17 +140,18 @@
 		}
 	}
 
-	@include keyframes(pulse) {
-		0% {
-			box-shadow: 0 0 1px 0 rgba(nb-theme(color-fg-highlight), 0);
-		}
-		20% {
-			box-shadow: 0 0 3px 10px rgba(nb-theme(color-fg-highlight), 0.4);
-		}
-		100% {
-			box-shadow: 0 0 5px 20px rgba(nb-theme(color-fg-highlight), 0);
-		}
-	}
+	// TODO style
+	// @include keyframes(pulse) {
+	// 	0% {
+	// 		box-shadow: 0 0 1px 0 rgba(nb-theme(color-fg-highlight), 0);
+	// 	}
+	// 	20% {
+	// 		box-shadow: 0 0 3px 10px rgba(nb-theme(color-fg-highlight), 0.4);
+	// 	}
+	// 	100% {
+	// 		box-shadow: 0 0 5px 20px rgba(nb-theme(color-fg-highlight), 0);
+	// 	}
+	// }
 
 	@include keyframes(pulse-light) {
 		0% {
@@ -218,7 +219,7 @@
 		}
 	}
 
-	.admin-menu{
+	.admin-menu {
 		cursor: pointer;
 	}
 }
