feat(ever-admin): we can now save delivery zones to the DB

--- a/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
@@ -14,9 +14,7 @@
 					[hidden]="isEditing"
 					class="form-group row mb-4 centered"
 				>
-					<span (click)="testValues()"
-						>Select shape to add a new zone</span
-					>
+					<span>Select shape to add a new zone</span>
 					<div class="col-sm-12 btn-container">
 						<button
 							(click)="
