--- a/shop/website-angular/src/app/+orders/order/order.component.html
+++ b/shop/website-angular/src/app/+orders/order/order.component.html
@@ -1,18 +1,11 @@
 <mat-card class="order">
 	<div class="order-header">
-		<div class="warehouse-logo-container">
-			<warehouse-logo
-				[logo]="warehouse?.logo"
-				[border]="true"
-			></warehouse-logo>
-		</div>
 		<div class="order-status-container">
+			<!-- <h2 class="order-status-text" *ngIf="warehouse">{{warehouse.name}}</h2> -->
 			<p class="order-status-text">
-				{{ 'ORDER_VIEW.ORDER_ID' | translate }} {{ orderNumber }}
+				{{ 'ORDER_VIEW.ORDER_ID' | translate }} #{{ orderNumber }}
 			</p>
-			<!-- <p class="order-status-text">
-				{{ createdAt | date: 'yyyy-MM-dd HH:mm:ss' }}
-			</p> -->
+
 			<div class="order-status-text">
 				{{ order.orderType ? 'Takeout' : 'Delivery' }}
 			</div>
@@ -25,40 +18,41 @@
 					/>
 				</svg>
 			</p>
+			<p class="order-status-text">
+				{{ createdAt | date: 'yyyy-MM-dd HH:mm:ss' }}
+			</p>
 		</div>
 	</div>
-	<div class="order-details">
-		<div class="order-info">
-			<div class="product-info">
-				<h1 class="product-name">
-					{{ title }} <span class="product-price">${{ price }}</span>
-				</h1>
-				<h2 class="product-description">{{ description }}</h2>
+	<div class="warehouse-logo-container">
+		<warehouse-logo
+			[logo]="warehouse?.logo"
+			[border]="true"
+		></warehouse-logo>
+	</div>
+	<div class="products">
+		<div class="product-details" *ngFor="let product of products">
+			<div class="order-info">
+				<div class="product-info">
+					<h1 class="product-name">
+						{{ localeTranslate(product.product.title) }}
+						<span class="product-price">${{ product.price }}</span>
+					</h1>
+					<h2 class="product-description">
+						{{ localeTranslate(product.product.description) }}
+					</h2>
+				</div>
 			</div>
-			<div class="order-options">
-				<button
-					(click)="openDialog()"
-					mat-raised-button
-					color="accent"
-					class="cancel-button"
-				>
-					<svg viewBox="0 0 24 24">
-						<path
-							d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
-						/>
-					</svg>
-					{{ 'ORDER_VIEW.CANCEL' | translate }}
-				</button>
-				<button mat-raised-button color="accent" class="pay-button">
-					<svg class="payment-button-icon" viewBox="0 0 24 24">
-						<path
-							d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
-						/></svg
-					>Pay
-				</button>
+			<div class="order-images">
+				<img
+					class="order-picture"
+					[src]="localeTranslate(product.product.images)"
+				/>
+				<span
+					*ngIf="!order.products.length"
+					class="no-product-img order-picture"
+				></span>
 			</div>
-		</div>
-		<div class="side-container">
+			<!-- <div class="side-container">
 			<div class="warehouse-info" *ngIf="warehouse">
 				<h5>{{ warehouse.name }}</h5>
 				<span>{{ warehouse.contactPhone }}</span>
@@ -69,17 +63,38 @@
 				<span>{{ carrier.phone }}</span>
 				<span>{{ carrier.geoLocation.streetAddress }}</span>
 			</div>
+		</div> -->
 		</div>
 	</div>
-	<div class="order-images">
-		<img
-			*ngFor="let image of imgArray"
-			class="order-picture"
-			[src]="image"
-		/>
-		<span
-			*ngIf="!order.products.length"
-			class="no-product-img order-picture"
-		></span>
+	<div class="order-options">
+		<button
+			(click)="openDialog()"
+			mat-raised-button
+			color="accent"
+			class="cancel-button"
+		>
+			<svg viewBox="0 0 24 24">
+				<path
+					d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
+				/>
+			</svg>
+			{{ 'ORDER_VIEW.CANCEL' | translate }}
+		</button>
+		<button mat-raised-button color="accent" class="pay-button">
+			<svg class="payment-button-icon" viewBox="0 0 24 24">
+				<path
+					d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
+				/></svg
+			>Pay
+		</button>
+		<button
+			mat-raised-button
+			color="accent"
+			(click)="openMap()"
+			class="pay-button"
+			*ngIf="carrier"
+		>
+			Carrier
+		</button>
 	</div>
 </mat-card>
