--- a/admin/website-angular/src/app/@theme/components/switcher/switcher.component.scss
+++ b/admin/website-angular/src/app/@theme/components/switcher/switcher.component.scss
@@ -28,7 +28,7 @@
 
 // 		& > span {
 // 			font-size: 1.125rem;
-// 			font-weight: nb-theme(font-weight-bold);
+// 			font-weight: 500;
 // 			transition: opacity 0.3s ease;
 // 			color: nb-theme(color-fg);
 
