--- a/admin/website-angular/src/app/@theme/layouts/sample/sample.layout.scss
+++ b/admin/website-angular/src/app/@theme/layouts/sample/sample.layout.scss
@@ -82,7 +82,7 @@
 			text-align: center;
 		}
 
-		background: transparent;
+		// background: transparent;
 
 		.main-btn {
 			padding: 0.75rem 2.5rem;
