--- a/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-header/chart-panel-header.component.scss
+++ b/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-header/chart-panel-header.component.scss
@@ -48,7 +48,7 @@
 
 			::ng-deep .legends {
 				padding-left: 0;
-				// font-size: nb-theme(font-size-sm);
+				font-size: 0.875rem;
 			}
 
 			::ng-deep .legend {
