--- a/admin/website-angular/src/app/pages/ui-features/buttons/shape-buttons/shape-buttons.component.scss
+++ b/admin/website-angular/src/app/pages/ui-features/buttons/shape-buttons/shape-buttons.component.scss
@@ -23,8 +23,8 @@
 //     font-size: 0.875rem;
 
 //     span:nth-child(2) {
-//       color: nb-theme(color-fg-heading);
-//       font-weight: nb-theme(font-weight-bold);
+//       color: #2a2a2a;
+//       font-weight: 500;
 //     }
 //   }
 // }
