--- a/admin/website-angular/src/app/pages/ui-features/tabs/tabs.component.scss
+++ b/admin/website-angular/src/app/pages/ui-features/tabs/tabs.component.scss
@@ -10,13 +10,13 @@
 // 	}
 
 // 	nb-tab {
-// 		padding: nb-theme(padding);
+// 		padding: 1.25rem;
 // 	}
 
 // 	::ng-deep ngx-tab1,
 // 	::ng-deep ngx-tab2 {
 // 		display: block;
-// 		padding: nb-theme(padding);
+// 		padding: 1.25rem;
 // 	}
 
 // 	@include media-breakpoint-down(xs) {
