--- a/admin/website-angular/src/app/@theme/components/theme-settings/theme-settings.component.scss
+++ b/admin/website-angular/src/app/@theme/components/theme-settings/theme-settings.component.scss
@@ -3,6 +3,8 @@
 @include nb-install-component() {
 	h6 {
 		margin-bottom: 0.5rem;
+		font-weight: 500;
+		font-size: 1rem;
 	}
 
 	.settings-row {
@@ -18,17 +20,17 @@
 			text-decoration: none;
 			font-size: 2.25rem;
 
-			//   color: nb-theme(color-fg);
+			color: #a4abb3;
 
-			//   &.selected {
-			//     color: nb-theme(color-success);
-			//   }
+			&.selected {
+				color: #40dc7e;
+			}
 
-			//   @include nb-for-theme(cosmic) {
-			//     &.selected {
-			//       color: nb-theme(link-color);
-			//     }
-			//   }
+			@include nb-for-theme(cosmic) {
+				&.selected {
+					color: #3dcc6d;
+				}
+			}
 		}
 	}
 
@@ -68,7 +70,7 @@
 		}
 	}
 
-	.language-select {
+	.settings-row select {
 		max-height: 40px;
 		padding: 0;
 		padding-left: 10px;
