--- a/admin/website-angular/src/app/@theme/components/theme-switcher/themes-switcher-list/theme-switcher-list.component.scss
+++ b/admin/website-angular/src/app/@theme/components/theme-switcher/themes-switcher-list/theme-switcher-list.component.scss
@@ -97,7 +97,7 @@ $icon-top-color-everdark: black;
 				font-weight: 300;
 				vertical-align: super;
 				padding-left: 1rem;
-				// color: nb-theme(color-fg-heading);
+				// color: #2a2a2a;
 			}
 		}
 	}
