--- a/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-summary/chart-panel-summary.component.scss
+++ b/admin/website-angular/src/app/pages/+dashboard/charts-panel/chart-panel-summary/chart-panel-summary.component.scss
@@ -6,25 +6,28 @@
 	.summary-container {
 		display: flex;
 		flex: 1;
-		// background-color: nb-theme(chart-panel-summary-background-color);
-		// box-shadow: nb-theme(chart-panel-summary-box-shadow);
+		background-color: nb-theme(chart-panel-summary-background-color);
+		box-shadow: nb-theme(chart-panel-summary-box-shadow);
 		justify-content: space-between;
 		padding: 1.8rem 4rem 1.2rem;
 		margin-bottom: 1rem;
-		// border: nb-theme(chart-panel-summary-border-width) solid
-		// 	nb-theme(chart-panel-summary-border-color);
+		border: nb-theme(chart-panel-summary-border-width) solid
+			nb-theme(chart-panel-summary-border-color);
 		border-left: none;
 		border-right: none;
 
 		.summary {
 			width: 100%;
 		}
+
+		small {
+			margin-bottom: 0.5rem;
+		}
 	}
 
 	.value {
 		font-size: 2rem;
-		// color: nb-theme(color-fg-heading);
-
+		color: #2a2a2a;
 		span div small {
 			font-size: 0.5em;
 			display: block;
@@ -32,25 +35,25 @@
 	}
 
 	@include media-breakpoint-down(sm) {
-		// .value,
-		// .title {
-		// font-weight: nb-theme(font-weight-bold);
-		// }
+		.value,
+		.title {
+			font-weight: 500;
+		}
 
-		// .title {
-		// 	font-size: nb-theme(font-size-sm);
-		// }
+		.title {
+			font-size: 0.875rem;
+		}
 
-		// .value {
-		// 	font-size: nb-theme(font-size-xlg);
-		// }
+		.value {
+			font-size: 1.25rem;
+		}
 	}
 
 	@include media-breakpoint-down(is) {
-		// .summary-container {
-		// padding-left: nb-theme(padding);
-		// padding-right: nb-theme(padding);
-		// }
+		.summary-container {
+			padding-left: 1.25rem;
+			padding-right: 1.25rem;
+		}
 
 		.value {
 			margin-top: 0.5rem;
