--- a/admin/website-angular/src/app/pages/+dashboard/dashboard.component.scss
+++ b/admin/website-angular/src/app/pages/+dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@ $shadow-green: #00977e;
 
 @include nb-install-component() {
 	.progress-info {
-		// color: nb-theme(color-fg-heading);
+		color: #2a2a2a;
 		margin-top: 2.5rem;
 
 		&:first-child {
@@ -12,20 +12,21 @@ $shadow-green: #00977e;
 		}
 	}
 
-	// .title {
-	// 	font-family: nb-theme(font-secondary);
-	// 	font-size: nb-theme(font-size-lg);
-	// 	font-weight: nb-theme(font-weight-bold);
-	// }
+	.title {
+		font-family: font-main;
+		font-size: 1.125rem;
+		font-weight: 600;
+	}
 
 	.value {
-		font-size: 3rem;
-		// font-weight: nb-theme(font-weight-light);
+		font-size: 2.4rem;
+		font-weight: 300;
 		margin-top: 0.5rem;
+		line-height: 1.1;
 	}
 
 	.description {
-		// color: nb-theme(color-fg);
+		color: #a4abb3;
 		margin-top: 0.5rem;
 	}
 
@@ -39,7 +40,7 @@ $shadow-green: #00977e;
 
 		.progress-value {
 			height: 0.6rem;
-			// background: nb-theme(progress-bar-background);
+			background: nb-theme(progress-bar-background);
 
 			@include nb-for-theme(cosmic) {
 				box-shadow: 0 0.2rem $shadow-green;
