--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.scss
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse.component.scss
@@ -46,7 +46,7 @@ $brand-darken: darken($brand, 5%);
 	font-size: 0.875rem;
 	// TODO style
 	// font-weight: nb-theme(font-weight-bolder);
-	// color: nb-theme(color-fg-heading);
+	// color: #2a2a2a;
 }
 
 .example-container:not(:last-child) {
