--- a/admin/website-angular/src/app/pages/charts/d3/d3.component.scss
+++ b/admin/website-angular/src/app/pages/charts/d3/d3.component.scss
@@ -13,7 +13,7 @@
 
 //     ::ng-deep {
 //       .pie-label {
-//         fill: nb-theme(color-fg-heading);
+//         fill: #2a2a2a;
 //       }
 
 //       .grid-line-path {
@@ -21,7 +21,7 @@
 //       }
 
 //       text {
-//         fill: nb-theme(color-fg-heading);
+//         fill: #2a2a2a;
 //       }
 
 //       .chart-legend {
@@ -29,9 +29,9 @@
 //           background: nb-theme(color-bg);
 //         }
 //         .legend-label {
-//           color: nb-theme(color-fg-heading);
+//           color: #2a2a2a;
 //           .active .legend-label-text {
-//             color: nb-theme(color-fg-heading);
+//             color: #2a2a2a;
 //           }
 //         }
 //       }
