--- a/admin/website-angular/src/app/pages/forms/form-inputs/form-inputs.component.scss
+++ b/admin/website-angular/src/app/pages/forms/form-inputs/form-inputs.component.scss
@@ -64,14 +64,14 @@
 // 		font-size: 1.25rem;
 // 		font-family: nb-theme(font-secondary);
 // 		font-weight: nb-theme(font-weight-bolder);
-// 		color: nb-theme(color-fg-heading);
+// 		color: #2a2a2a;
 // 	}
 
 // 	.current-rate {
 // 		font-size: 1.5rem;
 // 		@include nb-ltr(padding-left, 1rem);
 // 		@include nb-rtl(padding-right, 1rem);
-// 		color: nb-theme(color-fg-heading);
+// 		color: #2a2a2a;
 // 	}
 
 // 	.full-name-inputs {
