--- a/admin/website-angular/src/app/pages/ui-features/buttons/labeled-actions-group/labeled-actions-group.component.scss
+++ b/admin/website-angular/src/app/pages/ui-features/buttons/labeled-actions-group/labeled-actions-group.component.scss
@@ -21,8 +21,8 @@
 
 // 		span {
 // 			font-family: nb-theme(font-secondary);
-// 			font-weight: nb-theme(font-weight-bold);
-// 			color: nb-theme(color-fg-heading);
+// 			font-weight: 500;
+// 			color: #2a2a2a;
 // 			text-transform: uppercase;
 // 		}
 // 	}
