--- a/admin/website-angular/src/app/pages/ui-features/buttons/size-buttons/size-buttons.component.scss
+++ b/admin/website-angular/src/app/pages/ui-features/buttons/size-buttons/size-buttons.component.scss
@@ -21,6 +21,6 @@
 //     margin-bottom: 0.75rem;
 //     font-size: 0.875rem;
 //     font-weight: nb-theme(font-weight-bolder);
-//     color: nb-theme(color-fg-heading);
+//     color: #2a2a2a;
 //   }
 // }
