--- a/admin/website-angular/src/app/pages/ui-features/typography/typography.component.scss
+++ b/admin/website-angular/src/app/pages/ui-features/typography/typography.component.scss
@@ -5,12 +5,12 @@
 //   .font-secondary .font-header .name {
 //     font-size: 4.5rem;
 //     line-height: 4rem;
-//     font-weight: nb-theme(font-weight-bold);
+//     font-weight: 500;
 //   }
 
 //   .font-main .font-header .name {
 //     font-size: 3rem;
-//     font-weight: nb-theme(font-weight-bold);
+//     font-weight: 500;
 //   }
 
 //   .font-row {
@@ -49,7 +49,7 @@
 //     padding-bottom: 1rem;
 //     margin-bottom: 1rem;
 //     border-bottom: 1px solid nb-theme(separator);
-//     color: nb-theme(color-fg-heading);
+//     color: #2a2a2a;
 
 //     &:last-child {
 //       border-bottom: none;
