fix(ever-admin): fixed all pages style with default theme EV-1240

--- a/admin/website-angular/src/app/@theme/styles/styles.scss
+++ b/admin/website-angular/src/app/@theme/styles/styles.scss
@@ -8,6 +8,9 @@
 //angular2-toaster
 @import 'node_modules/angular2-toaster/toaster';
 
+// global app font size
+@import './font-size';
+
 // custom global ng-bootstrap modal
 @import './ng-bootstrap.modal';
 // loading progress bar theme
@@ -226,4 +229,18 @@ nb-card.no-box-shadow {
 			font-size: 1.1em;
 		}
 	}
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Exo !important;
+	font-weight: 500 !important;
+}
+
+.ng2-smart-action.ng-star-inserted i {
+	font-size: 1.5rem;
 }
