--- a/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/+carrier/carrier.component.html
@@ -29,7 +29,7 @@
 					class="btn btn-primary btn-with-icon no-text-transform"
 					[routerLink]="['./edit']"
 				>
-					<i class="nb-edit"></i>
+					<i class="ion-md-create"></i>
 					<span>{{
 						'CARRIERS_VIEW.CARRIER_PAGE.EDIT' | translate
 					}}</span>
