--- a/admin/website-angular/src/app/pages/+customers/+customer/ea-customer-stores/ea-customer-stores.component.html
+++ b/admin/website-angular/src/app/pages/+customers/+customer/ea-customer-stores/ea-customer-stores.component.html
@@ -4,10 +4,10 @@
 
 		<div class="btn-group btn-divided-group pull-right">
 			<button class="btn btn-icon btn-success active" (click)="createWarehouseModel()">
-				<i class="nb-plus"></i>
+				<i class="ion-md-add"></i>
 			</button>
 			<button class="btn btn-icon btn-danger active" [disabled]="!hasSelectedWarehouses" (click)="deleteSelectedRows()">
-				<i class="nb-trash"></i>
+				<i class="ion-md-trash"></i>
 			</button>
 		</div>
 	</nb-card-header> -->
