--- a/admin/website-angular/src/app/pages/+profile/edit/account/account.component.html
+++ b/admin/website-angular/src/app/pages/+profile/edit/account/account.component.html
@@ -17,7 +17,7 @@
 							: ''
 					"
 					formControlName="oldPassword"
-					placeholder="{{&quot;PROFILE_VIEW.OLD_PASSWORD&quot; | translate}}"
+					placeholder="{{ 'PROFILE_VIEW.OLD_PASSWORD' | translate }}"
 				/>
 				<span *ngIf="oldPasswordErrorMsg">
 					<strong class="text-danger">
@@ -42,7 +42,7 @@
 							: ''
 					"
 					formControlName="password"
-					placeholder="{{&quot;PROFILE_VIEW.NEW_PASSWORD&quot; | translate}}"
+					placeholder="{{ 'PROFILE_VIEW.NEW_PASSWORD' | translate }}"
 				/>
 				<span *ngIf="passwordErrorMsg">
 					<strong class="text-danger">
@@ -67,7 +67,9 @@
 							: ''
 					"
 					formControlName="repeatPassword"
-					placeholder="{{&quot;PROFILE_VIEW.REPEAT_NEW_PASSWORD&quot; | translate}}"
+					placeholder="{{
+						'PROFILE_VIEW.REPEAT_NEW_PASSWORD' | translate
+					}}"
 				/>
 				<span *ngIf="repeatPasswordErrorMsg">
 					<strong class="text-danger">
@@ -86,7 +88,7 @@
 				type="button"
 				(click)="saveChanges()"
 			>
-				<i class="nb-checkmark"></i>
+				<i class="ion-md-checkmark"></i>
 				<span> {{ 'PROFILE_VIEW.SAVE' | translate }} </span>
 			</button>
 		</form>
