--- a/admin/website-angular/src/app/pages/+profile/edit/basic-info/basic-info.component.html
+++ b/admin/website-angular/src/app/pages/+profile/edit/basic-info/basic-info.component.html
@@ -162,7 +162,7 @@
 				[disabled]="!basicInfoForm.valid || !basicInfoForm.dirty"
 				(click)="saveChanges()"
 			>
-				<i class="nb-checkmark"></i>
+				<i class="ion-md-checkmark"></i>
 				<span> {{ 'PROFILE_VIEW.SAVE' | translate }} </span>
 			</button>
 		</form>
