--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/warehouse-order-view.component.html
@@ -23,7 +23,7 @@
 					[nbSpinner]="loading"
 					nbSpinnerStatus="success"
 				>
-					<span class="nb-skip-forward"></span>
+					<span class="ion-md-skip-forward"></span>
 					{{ 'WAREHOUSE_VIEW.ORDER.CONFIRM' | translate }}
 				</button>
 			</div>
@@ -51,7 +51,7 @@
 					[nbSpinner]="loading"
 					nbSpinnerStatus="success"
 				>
-					<span class="nb-list" aria-hidden="true"></span>
+					<span class="ion-md-list" aria-hidden="true"></span>
 					{{ 'WAREHOUSE_VIEW.ORDER.START_ALLOCATION' | translate }}
 				</button>
 			</div>
