--- a/admin/website-angular/src/app/@theme/components/theme-settings/theme-settings.component.html
+++ b/admin/website-angular/src/app/@theme/components/theme-settings/theme-settings.component.html
@@ -31,6 +31,7 @@
 		(change)="toggleTheme()"
 		status="primary"
 		class="form-control"
+		disabled
 	>
 		<option *ngFor="let theme of themes" [value]="theme.value">
 			{{ theme.name }}</option
