--- a/admin/website-angular/src/app/@theme/styles/font-size.scss
+++ b/admin/website-angular/src/app/@theme/styles/font-size.scss
@@ -1,6 +1,5 @@
 html {
-	// TODO style
-	// font-size: 14px;
+	font-size: 14px;
 }
 
 span.space {
@@ -15,6 +14,10 @@ div.redirectBtn {
 	border-radius: 0.375rem;
 	position: relative;
 	cursor: pointer;
+
+	strong {
+		font-weight: 500;
+	}
 }
 
 div.redirectBtn:hover {
